/**
 * Class pour une catégorie d'ingredient
 */
export class CategorieIngredient {

  constructor(public nomCategorie : string) {
  }
}
