export class CategorieRecette {

  constructor(public nomCategorie : string) {
  }
}
