import {Ingredient} from "./ingredient";

export class Denree {

  constructor(
      public ingredient : Ingredient,
      public number : number,
  ) {
  }

}
