import {Etape} from "./etape";

export class Progression /*implements Etape*/{

  constructor(public listeEtape? : [Etape] ) {

  }
}
